# GB_recruting

./: LICENSE  README.md  docker-compose.yml  readme_dev.txt
backend/: Dockerfile  Recruting (1.0).yaml  db_bu.sqlite3  pyproject.toml  readme_dev.txt  requirements.txt
backend/config/: asgi.py  settings.py  settings_prd.py  urls.py  wsgi.py
backend/recrutingapp/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  views.py
backend/recrutingapp/fixtures/: cities.json  documentstatus.json  genders.json  regions.json  test_data.json  test_users.json
backend/recrutingapp/migrations/: 0001_initial.py  0002_city_cv_documentstatus_employer_gender_region_skill_and_more.py  0002_city_cv_documentstatus_gender_region_skill_and_more.py  0002_city_employeeeducation_employeeexperience_gender_and_more.py  0002_city_gender_region_skill_employeeexperience_and_more.py  0003_alter_cv_employee_alter_cveducation_cv_and_more.py  0003_alter_gender_options_alter_gender_id_and_more.py  0004_cv_status_cv_status_info.py  0004_region_alter_city_region.py  0005_alter_city_name_alter_region_name.py  0005_employee_birthday_employee_name.py  0006_employee_description.py  0007_cveducation_specialty_cvexperience_position.py  0008_cv_position_cv_salary.py  0009_favorite_favorite_unique_user_content_type_object_id.py  0010_employer_alter_employee_owner_vacancy.py  0011_rename_employee_vacancy_employer.py  0012_employer_status_employer_status_info_and_more.py  (+1 more)
backend/userapp/: admin.py  models.py  serializers.py  tests.py  utils.py  views.py
docs/: Components.drawio  (+1 more)
(+141 files in other folders)
